fix: button alignment in profile view on big screens

--- a/src/app/settings/profile/profile.page.scss
+++ b/src/app/settings/profile/profile.page.scss
@@ -1,6 +1,11 @@
 ion-input, ion-select {
     text-align: right;
 }
+
+ion-list {
+    max-width: 500px;
+}
+
 #username span {
     float: right;
 }
